--- a/test.html
+++ b/test.html
@@ -28,6 +28,9 @@
 		  width="200" 
 		  height="200" />
 		</p>
+<p> 
+This paragraph was typed on my phone.
+</p>
 		<p> 
 		this website is here because it is a test one for the epic and epic LosInformaticosHermanos.com website. This serves 0 perpose other than to promote 4 youtube channel.
 		</p>
