--- a/test.html
+++ b/test.html
@@ -34,8 +34,11 @@
 		<p>
 		and this paragraph was typed on my ipad
 		</p>
+		<p>
+		github is <b>truly</b> the epic.
+		</p>
 		<p> 
-		this website is here because it is a test one for the epic and epic LosInformaticosHermanos.com website. This serves 0 perpose other than to promote 4 youtube channel.
+		This serves 0 perpose other than to promote 4 youtube channel.
 		</p>
 	</body>
 </html>
