--- a/test.html
+++ b/test.html
@@ -43,5 +43,10 @@
 		<p>
 		it is thursday
 		</p>
+		<p>
+		<img src="946D36F3-5095-45FD-9C0E-5808CB54CE1C.png"
+		     width="200"
+		     height="200" />
+		</p>
 	</body>
 </html>
