Update and rename test.html to main.html

--- a/main.html
+++ b/main.html
@@ -3,13 +3,20 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="widt=device-width, initial-scale=1">
-		<title>EPIC WEBSITE</title>
+		<title>Los Informaticos Hermanos</title>
 		 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 		
 	</head>
 	<body>
-		<h1>EPIC WEBSITE</h1>
-		the epic smal text 
+		<p>
+			<center>
+			<img src="EF225185-718E-492B-8B09-43061E0C8E8E.jpeg"
+			width="400"
+			height="400" />
+			</center>
+		</p>
+		<h1>Los Informaticos Hermanos</h1>
+		computer part shop
 		<p>
 		<a href="https://youtube.com/@doodledoocg">my youtube channel</a
 		</p>
@@ -28,20 +35,11 @@
 		  width="200" 
 		  height="200" />
 		</p>
-		<p> 
-		This paragraph was typed on my phone.
-		</p>
-		<p>
-		and this paragraph was typed on my ipad
-		</p>
 		<p>
 		github is <b>truly</b> the epic.
 		</p>
 		<p> 
 		This serves 0 perpose other than to promote 4 youtube channel.
-		</p>
-		<p>
-		it is thursday
 		</p>
 		<p>
 		<img src="946D36F3-5095-45FD-9C0E-5808CB54CE1C.png"
