--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <!Doctype html>
 <html>
 	<head>
+		<link rel="icon" href="http://example.com/favicon.png">
 		<meta charset="utf-8">
 		<meta name="viewport" content="widt=device-width, initial-scale=1">
 		<title>Los Informaticos Hermanos</title>
