--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 		
 	</head>
 	<body>
+		<p style="text-align:center;"><a href="https://youtube.com/@doodledoocg">shop here</a </p>
 		<p>
 			<center>
 			<img src="EF225185-718E-492B-8B09-43061E0C8E8E.jpeg"
