--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 		<title>Los Informaticos Hermanos</title>
 	</head>
 	<body>
-		<p style="text-align:right;"><a href="https://doodledoocg.github.io/Los-Informaticos-Hermanos/shop.html"><u>shop here</u></a </p>
+		<p style="text-align:right;"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/shop.html"><u>shop here</u></a </p>
 		<p>
 			<center>
 			<img src="EF225185-718E-492B-8B09-43061E0C8E8E.jpeg"
