--- a/shop.html
+++ b/shop.html
@@ -7,7 +7,7 @@
 		<title>Shop Los Informaticos Hermanos</title>	
 	</head>
 	<body>
-		<p style="text-align:left;"><a href="https://doodledoocg.github.io/Los-Informaticos-Hermanos/main.html"><u>Home</u></a </p>
+		<p style="text-align:left;"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/main.html"><u>Home</u></a </p>
 		<p>
 			<center>
 			<img src="EF225185-718E-492B-8B09-43061E0C8E8E.jpeg"
