--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 		</p>
 		<p>
 		<p>
-		<a href="https://www.youtube.com/@pongothepenquin">pongo channel</a
+		<a href="https://www.youtube.com/@pongothepenquin">pongos channel</a
 		</p>
 		<p>
 		<a href="https://www.youtube.com/@breaddealer7661">bread deal youtube</a
