--- a/main.html
+++ b/main.html
@@ -17,29 +17,10 @@
 		</p>
 		<h1>Los Informaticos Hermanos</h1>
 		computer part shop
-		<p>
-		<a href="https://youtube.com/@doodledoocg">my youtube channel</a
-		</p>
-		<p>
-		<a href="https://www.youtube.com/@user-nj9nz1dv6j">person3259 youtube</a
-		</p>
-		<p>
-		<p>
-		<a href="https://www.youtube.com/@pongothepenquin">pongos channel</a
-		</p>
-		<p>
-		<a href="https://www.youtube.com/@breaddealer7661">bread deal youtube</a
-		</p>
-		<p>
+		<center><p><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/about.html"><u>About us</u></a></p></center>
 		<img src="chicken.png" 
 		  width="200" 
 		  height="200" />
-		</p>
-		<p>
-		github is <b>truly</b> the epic.
-		</p>
-		<p> 
-		This serves 0 perpose other than to promote 4 youtube channel.
 		</p>
 		<p>
 		<img src="946D36F3-5095-45FD-9C0E-5808CB54CE1C.png"
