--- a/main.html
+++ b/main.html
@@ -8,14 +8,15 @@
 	</head>
 	<body>
 		<p style="text-align:right;"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/shop.html"><u>shop here</u></a </p>
+		<h1>Los Informaticos Hermanos</h1>
 		<p>
 			<center>
-			<img src="EF225185-718E-492B-8B09-43061E0C8E8E.jpeg"
+			<img src="AA450B90-24E7-4ED8-BA54-0CC3E77D93DE.png"
 			width="400"
 			height="400" />
 			</center>
 		</p>
-		<h1>Los Informaticos Hermanos</h1>
+		<h2>Los Informaticos Hermanos</h2>
 		computer part shop
 		<center><p><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/about.html"><u>About us</u></a></p></center>
 		<img src="chicken.png" 
