--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<p style="text-align:right;"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/shop.html"><u>shop here</u></a </p>
-		<h1>Los Informaticos Hermanos</h1>
+			<center><h1>Los Informaticos Hermanos</h1></center>
 		<p>
 			<center>
 			<img src="AA450B90-24E7-4ED8-BA54-0CC3E77D93DE.png"
@@ -16,8 +16,8 @@
 			height="400" />
 			</center>
 		</p>
-		<h2>Los Informaticos Hermanos</h2>
-		computer part shop
+		<center><h2>Los Informaticos Hermanos</h2>
+			computer part shop</center>
 		<center><p><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/about.html"><u>About us</u></a></p></center>
 		<img src="chicken.png" 
 		  width="200" 
