--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,7 @@
 		<p style="text-align:left;"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/main.html"><u>Home</u></a </p>
 		<p>
 			<center>
-			<img src="EF225185-718E-492B-8B09-43061E0C8E8E.jpeg"
+			<img src="AA450B90-24E7-4ED8-BA54-0CC3E77D93DE.png"
 			width="400"
 			height="400" />
 			</center>
