--- a/about.html
+++ b/about.html
@@ -1,11 +1,38 @@
 <!Doctype html>
 <html>
 <head>
+<link rel="icon" href="chicken.png">
+<link rel="stylesheet" href="style.css">
 <meta charset="utf-8">
 <meta name="viewport" content="widt=device-width, initial-scale=1">
 <title>About us: los informaticos hermanos</title>
 </head>             
 <body>
+</p>
 <center><h1>About Us</h1></center>
+<p>
+		<center>
+		<img src="AA450B90-24E7-4ED8-BA54-0CC3E77D93DE.png"
+		width="500"
+		height="500" />
+		</center>
+</p>
+<header>
+<div class="container">
+<nav class="navbar">
+<a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/main.html" class="nav-branding">Los Informaticos Hermanos</a>
+<ul class="nav-menu">
+<li class="nav-link"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/main.html">Home</a></li>
+<li class="nav-link"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/about.html">About</a></li>
+<li class="nav-link"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/contact.html">Contact</a></li>
+<li class="nav-link"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/shop.html">Shop</a></li>
+</ul>
+</nav>
+</div>
+</header>
+
+<p style="font-size:2.5vw">
+	Los Informaticos Hermanos is a school project made by four school students and is used to show prices of computer components that we are selling because nearly everyone in our school is into tech. We had the idea that it was going to be a great idea to do this, we would become rich. But then this midget emo kid told and then one of our employees got suspended for a day because they didnt like the way we were selling pc parts (we were following all the correct laws in selling stuff at school). This website is currently not shipping anywere.
+</p>
 </body>
 </html>
