--- a/main.html
+++ b/main.html
@@ -1,12 +1,26 @@
 <!Doctype html>
 <html>
 	<head>
+		<link rel="stylesheet" href="style.css"
 		<link rel="icon" href="chicken.png">
 		<meta charset="utf-8">
 		<meta name="viewport" content="widt=device-width, initial-scale=1">
 		<title>Los Informaticos Hermanos</title>
 	</head>
 	<body>
+		<header>
+	<div class="container">
+	<nav class="navbar">
+	<a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/main.html" class="nav-branding">Los Informaticos Hermanos</a>
+	<ul class="nav-menu">
+	<li class="nav-link"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/main.html">Home</a></li>
+	<li class="nav-link"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/about.html">About</a></li>
+	<li class="nav-link"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/contact.html">Contact</a></li>
+	<li class="nav-link"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/shop.html">Shop</a></li>
+	</ul>
+	</nav>
+	</div>
+	</header>
 		<p style="text-align:right;"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/shop.html"><u>shop here</u></a </p>
 			<center><h1>Los Informaticos Hermanos</h1></center>
 		<p>
