--- a/main.html
+++ b/main.html
@@ -21,7 +21,6 @@
 	</nav>
 	</div>
 	</header>
-		<p style="text-align:right;"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/shop.html"><u>shop here</u></a </p>
 			<center><h1>Los Informaticos Hermanos</h1></center>
 		<p>
 			<center>
@@ -30,17 +29,7 @@
 			height="500" />
 			</center>
 		</p>
-		<center><h2>Los Informaticos Hermanos</h2>
-			computer part shop</center>
-		<center><p><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/about.html"><u>About us</u></a></p></center>
-		<img src="chicken.png" 
-		  width="200" 
-		  height="200" />
-		</p>
-		<p>
-		<img src="946D36F3-5095-45FD-9C0E-5808CB54CE1C.png"
-		     width="200"
-		     height="200" />
-		</p>
+		<center><h2>Welcome to Los Informaticos Hermanos (the computer brothers). Feel free to look around at our shop.</h2></center>
+		
 	</body>
 </html>
