--- a/shop.html
+++ b/shop.html
@@ -2,11 +2,25 @@
 <html>
 	<head>
 		<link rel="icon" href="chicken.png">
+		<link rel="stylesheet" href="style.css">
 		<meta charset="utf-8">
 		<meta name="viewport" content="widt=device-width, initial-scale=1">
 		<title>Shop Los Informaticos Hermanos</title>	
 	</head>
 	<body>
+		<header>
+<div class="container">
+<nav class="navbar">
+<a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/main.html" class="nav-branding">Los Informaticos Hermanos</a>
+<ul class="nav-menu">
+<li class="nav-link"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/main.html">Home</a></li>
+<li class="nav-link"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/about.html">About</a></li>
+<li class="nav-link"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/contact.html">Contact</a></li>
+<li class="nav-link"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/shop.html">Shop</a></li>
+</ul>
+</nav>
+</div>
+</header>
 		<p style="text-align:left;"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/main.html"><u>Home</u></a </p>
 		<p>
 			<center>
