--- a/shop.html
+++ b/shop.html
@@ -22,6 +22,7 @@
 </div>
 </header>
 		<p>
+			<center><h1>Shop</h1></center>
 			<center>
 			<img src="AA450B90-24E7-4ED8-BA54-0CC3E77D93DE.png"
 			width="500"
