--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,35 @@
+<!Doctype html>
+<html>
+	<head>
+		<link rel="icon" href="chicken.png">
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="style.css"
+		<meta name="viewport" content="widt=device-width, initial-scale=1">
+		<title>Contact: Los Informaticos Hermanos</title>
+	</head>
+	<body>
+		<header>
+	<div class="container">
+	<nav class="navbar">
+	<a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/main.html" class="nav-branding">Los Informaticos Hermanos</a>
+	<ul class="nav-menu">
+	<li class="nav-link"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/main.html">Home</a></li>
+	<li class="nav-link"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/about.html">About</a></li>
+	<li class="nav-link"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/contact.html">Contact</a></li>
+	<li class="nav-link"><a href="https://doodledooegg.github.io/Los-Informaticos-Hermanos/shop.html">Shop</a></li>
+	</ul>
+	</nav>
+	</div>
+	</header>
+    
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet consectetur adipiscing elit ut aliquam purus sit amet. Cursus metus aliquam eleifend mi in nulla posuere. Eu non diam phasellus vestibulum lorem. Ac tincidunt vitae semper quis lectus nulla. Ac orci phasellus egestas tellus rutrum. Egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Ipsum nunc aliquet bibendum enim facilisis. Aenean et tortor at risus viverra adipiscing at. Viverra justo nec ultrices dui sapien eget mi proin. Platea dictumst quisque sagittis purus sit amet. Elementum sagittis vitae et leo duis ut diam quam. Nisl condimentum id venenatis a. Dui nunc mattis enim ut tellus elementum sagittis vitae et. At quis risus sed vulputate. Enim nec dui nunc mattis enim ut. Proin sagittis nisl rhoncus mattis rhoncus. Eu tincidunt tortor aliquam nulla facilisi cras. Euismod quis viverra nibh cras pulvinar mattis.
 
+Quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor sit. Pellentesque eu tincidunt tortor aliquam. Mauris commodo quis imperdiet massa tincidunt. At augue eget arcu dictum varius duis at consectetur lorem. Eu tincidunt tortor aliquam nulla facilisi cras fermentum odio eu. Urna molestie at elementum eu. Aliquam ut porttitor leo a diam sollicitudin tempor id eu. Purus in mollis nunc sed. Nisi lacus sed viverra tellus in hac habitasse platea dictumst. Et netus et malesuada fames ac turpis. Praesent tristique magna sit amet purus gravida quis blandit turpis. Tincidunt augue interdum velit euismod in pellentesque massa. Dolor sit amet consectetur adipiscing elit. Volutpat diam ut venenatis tellus in metus vulputate eu scelerisque. Id porta nibh venenatis cras sed felis eget velit aliquet. Pretium aenean pharetra magna ac. Varius duis at consectetur lorem donec massa sapien faucibus. Elit eget gravida cum sociis natoque penatibus et magnis.
+
+Sed turpis tincidunt id aliquet risus feugiat in. Duis ut diam quam nulla porttitor massa. Vel elit scelerisque mauris pellentesque pulvinar pellentesque. Eleifend donec pretium vulputate sapien nec sagittis aliquam malesuada. Lacus suspendisse faucibus interdum posuere. Egestas integer eget aliquet nibh praesent tristique magna. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed. Ac placerat vestibulum lectus mauris ultrices. Viverra suspendisse potenti nullam ac tortor vitae. Integer vitae justo eget magna fermentum iaculis eu. Bibendum arcu vitae elementum curabitur. Sed lectus vestibulum mattis ullamcorper velit sed. Natoque penatibus et magnis dis parturient montes. Interdum varius sit amet mattis.
+
+Facilisis magna etiam tempor orci eu lobortis. Facilisis mauris sit amet massa vitae tortor condimentum. Orci dapibus ultrices in iaculis nunc sed augue lacus viverra. Vehicula ipsum a arcu cursus vitae congue mauris rhoncus. Ante metus dictum at tempor commodo ullamcorper a. Laoreet sit amet cursus sit amet dictum sit amet. Sit amet est placerat in egestas erat imperdiet. Tincidunt lobortis feugiat vivamus at augue eget. Consectetur purus ut faucibus pulvinar elementum integer enim neque volutpat. Id semper risus in hendrerit gravida. Est lorem ipsum dolor sit. Laoreet suspendisse interdum consectetur libero id faucibus nisl.
+
+Id consectetur purus ut faucibus pulvinar elementum integer enim. Diam quis enim lobortis scelerisque fermentum dui faucibus in ornare. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam vehicula. Lectus proin nibh nisl condimentum id. Faucibus pulvinar elementum integer enim neque volutpat ac tincidunt vitae. Euismod nisi porta lorem mollis aliquam. Feugiat nisl pretium fusce id velit ut tortor. Adipiscing bibendum est ultricies integer quis auctor elit sed. Tristique senectus et netus et malesuada fames ac turpis. Ut faucibus pulvinar elementum integer enim neque volutpat. At urna condimentum mattis pellentesque id nibh. Nec tincidunt praesent semper feugiat nibh sed pulvinar. Eros in cursus turpis massa tincidunt dui.</p>
+	</body>
+</html>
